--- a/templates/map.html
+++ b/templates/map.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../static/master.css">
-    <title>Dogs</title>
+    <title></title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+
   </body>
 </html>
