--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../static/master.css">
+    <link rel="stylesheet" href="../static/style.css">
     <title>Dogs</title>
   </head>
   <body>
     <h1>Hello World!</h1>
+    <img src="../static/umich.png" alt="img">
   </body>
 </html>
