plotly is working, breeds working, index page working

--- a/templates/breeds.html
+++ b/templates/breeds.html
@@ -1,7 +1,7 @@
 
 
 <head>
-<link rel="stylesheet" href="../static/breed-style.css">
+<link rel="stylesheet" href="../static/breedshtml.css">
 <title>Breeds</title>
 </head>
 
