--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/index.css">
     <title>Dogs</title>
   </head>
   <body>
     <h1>Hello World!</h1>
-    <img src="../static/umich.png" alt="img">
+    <h2>This site is about Dogs</h2>
+    <img id = 'doggie' src="../static/doggie.jpg" alt="img">
+    <p>Namely, this is about Dogs available for adoption. You can check out information on different types of breeds, map out breeds nearby</p>
   </body>
 </html>
