--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
     <h2>This site is about Dogs</h2>
     <img id = 'doggie' src="../static/doggie.jpg" alt="img">
     <p>Namely, this is about Dogs available for adoption. You can check out information on different types of breeds, map out breeds nearby</p>
+    <h2><a href="/breeds">Breeds</a></h2>
   </body>
 </html>
