--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -34,7 +34,7 @@
             <th>Age</th>
 
         </tr>
-    {% for dog in breeds_list %}
+    {% for dog in dogs_list %}
         <tr>
             <td>{{dog[0]}}</td>
             <td>{{dog[1]}}</td>
