3 working styled data displays

--- a/static/breedshtml.css
+++ b/static/breedshtml.css
@@ -20,7 +20,7 @@ h1 {
 table, th, td {
     border-width: 0.5;
     border-collapse: collapse;
-    border-style: dashed;
+    border-style: solid;
     padding: 10;
 }
 
