--- a/templates/breeds.html
+++ b/templates/breeds.html
@@ -12,6 +12,12 @@
 </style>
 </head>
 <body>
+  <header>
+    <nav>
+    <a href="/">Home</a>
+    <a href="/breeds">Breeds</a>
+    </nav>
+  </header>
 <h1>Dog Breed Types</h1>
 <img class='icon' src="../static/dog-house.png" alt="icon">
 
@@ -58,4 +64,5 @@
     </tr>
 {% endfor %}
 </table>
+<footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a></footer>
 </body>
