--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -5,6 +5,12 @@
     <title>Dogs by Breed</title>
   </head>
   <body>
+    <header>
+      <nav>
+      <a href="/">Home</a>
+      <a href="/breeds">Breeds</a>
+      </nav>
+    </header>
     <form action="/dogs" method="POST">
         Sort By:<br/>
         <input type="radio" name="sortby" value="mixbreed"/> Mix Breed <br/>
