--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,18 @@
     <title>Dogs</title>
   </head>
   <body>
+    <header>
+      <nav>
+      <a href="/">Home</a>
+      <a href="/breeds">Breeds</a>
+      </nav>
+    </header>
     <h1>Hello World!</h1>
     <h2>This site is about Dogs</h2>
     <img id = 'doggie' src="../static/doggie.jpg" alt="img">
-    <p>Namely, this is about Dogs available for adoption. You can check out information on different types of breeds, map out breeds nearby</p>
-    <h2><a href="/breeds">Breeds</a></h2>
+    <p>Namely, this is about Dogs available for adoption. You can check out information on different types of breeds, map out breeds nearby, and learn about specific dogs available for adoption</p>
+    <h2><a href="/breeds">Find a Dog!</a></h2>
+
+    <footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a></footer>
   </body>
 </html>
