--- a/templates/breed_details.html
+++ b/templates/breed_details.html
@@ -10,6 +10,12 @@
     <title>Breed Details</title>
   </head>
   <body>
+    <header>
+      <nav>
+      <a href="/">Home</a>
+      <a href="/breeds">Breeds</a>
+      </nav>
+    </header>
     <h1>{{breed_id}} - {{breed_type}}</h1>
     <img id= 'doggie' src= {{ image_url }} alt="Breed">
     <div style = 'text-align: center; margin-bottom: 40px;'><a href= {{ content_url }}>{{ title }}</a> by {{ author }} &copy / <a href= {{ license_url }} >CC BY</a></div>
@@ -36,6 +42,6 @@
 
     </table>
 
-
+  <footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a></footer>
   </body>
 </html>
