I have a working site with 4 different graphs

--- a/templates/breed_details.html
+++ b/templates/breed_details.html
@@ -42,6 +42,6 @@
 
     </table>
 
-  <footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a></footer>
+  <footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a>, This product includes data created by <a href="http://www.maxmind.com/">MaxMind</a>, Powered by <a href="http://www.petfinder.com">Petfinder</a>, This product uses the Flickr API but is not endorsed or certified by Flickr</footer>
   </body>
 </html>
