--- a/templates/breeds.html
+++ b/templates/breeds.html
@@ -58,11 +58,11 @@
         <td style = 'padding-left: 15px;' ><a href= /breed_details/{{dog[0]}} >{{dog[1]}}</a></td>
         <td style = 'padding: 0 10px;'>{{dog[2]}}</td>
         <td style = 'padding-left: 15px;'>{{dog[3]}}</td>
-        <td style= 'text-align: center; padding: 10px;'>{{dog[4]}}</td>
+        <td style= 'text-align: center; padding: 10px;'> <a href= /dogs/{{dog[0]}}>{{dog[4]}}</a></td>
         <td style= 'text-align: center;'><a href= /maps/{{dog[0]}} >Map</a></td>
 
     </tr>
 {% endfor %}
 </table>
-<footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a></footer>
+<footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a>, This product includes data created by <a href="http://www.maxmind.com/">MaxMind</a>, Powered by <a href="http://www.petfinder.com">Petfinder</a>, This product uses the Flickr API but is not endorsed or certified by Flickr</footer>
 </body>
