--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,6 @@
     <p>Namely, this is about Dogs available for adoption. You can check out information on different types of breeds, map out breeds nearby, and learn about specific dogs available for adoption</p>
     <h2><a href="/breeds">Find a Dog!</a></h2>
 
-    <footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a></footer>
+    <footer style = 'font-size: 11px;'>Free Vector Graphics by <a href="https://vecteezy.com">www.Vecteezy.com</a>, This product includes data created by <a href="http://www.maxmind.com/">MaxMind</a>, Powered by <a href="http://www.petfinder.com">Petfinder</a>, This product uses the Flickr API but is not endorsed or certified by Flickr</footer>
   </body>
 </html>
