fixed a variable display problem

--- a/templates/breed_details.html
+++ b/templates/breed_details.html
@@ -18,7 +18,7 @@
     </header>
     <h1>{{breed_id}} - {{breed_type}}</h1>
     <img id= 'doggie' src= {{ image_url }} alt="Breed">
-    <div style = 'text-align: center; margin-bottom: 40px;'><a href= {{ content_url }}>{{ title }}</a> by {{ author }} &copy / <a href= {{ license_url }} >CC BY</a></div>
+    <div style = 'text-align: center; margin-bottom: 40px;'><a href= {{ content_url }}>"{{ title }}"</a> by {{ author }} &copy / <a href= {{ license_url }} >CC BY</a></div>
 
 
     <table border=1>
